// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-contemplation-stale.acceptance given: [case1] a contemplated stone whose artifact then changes when: [t0] round 1: driver contemplates architect, stone passes then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.execute*.md
   │  ├─ reviews
   │  │   ├─ r1: architect (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r001._.given.by_peer.architect.md
   │  │   │   └─ taken: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r001._.taken.by_self.architect.md
   │  │   └─ r2: mechanic (l1, 1/3)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r002._.given.by_peer.mechanic.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i001.d9a573861846c62789.r002._.taken.by_self.mechanic.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 1 --allow-nitpicks 5
   │          └─ · cached
   │             └─ on 1.execute*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-contemplation-stale.acceptance given: [case1] a contemplated stone whose artifact then changes when: [t1] the artifact changes (new content hash) then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 2/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 2/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ [TEMP]/.reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ [TEMP]/.reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.taken.by_self.architect.md
   │
   └─ when you've contemplated each reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation-stale.acceptance given: [case1] a contemplated stone whose artifact then changes when: [t2] driver writes a FRESH .taken for the new hash then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 2/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 2/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.execute*.md
   │  ├─ reviews
   │  │   ├─ r1: architect (l1, 2/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.given.by_peer.architect.md
   │  │   │   └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r001._.taken.by_self.architect.md
   │  │   └─ r2: mechanic (l1, 2/3)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.given.by_peer.mechanic.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i002.93f1080dbfbccf8751.r002._.taken.by_self.mechanic.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 1 --allow-nitpicks 5
   │          └─ · cached
   │             └─ on 1.execute*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
